# s-s-n

./: .gitignore  FAQ.md  LICENSE  README.md  README_MINER_SETUP.md  deploy_miner.sh  install_miner.sh  install_simulator.sh  install_validator.sh  min_compute.yml  miner_config.yaml  requirements.txt  run_miner.sh  run_validator.sh  setup.py  simple_test.py  test_agent.py
simulate/trading/: CMakeLists.txt  pyproject.toml  vcpkg.json
simulate/trading/benchmark/: CMakeLists.txt  SimulationBenchmarks.cpp
simulate/trading/cmake/: CollectTestSources.cmake
simulate/trading/run/config/: simulation_0.xml
simulate/trading/src/cpp/: CMakeLists.txt  Simulation.cpp  Simulation.hpp  SimulationConfig.cpp  SimulationConfig.hpp  SimulationSignals.hpp  SimulationState.hpp  TheSimulatorModule.cpp  TimeConfig.cpp  TimeConfig.hpp  main.cpp
simulate/trading/src/cpp/accounting/: Account.cpp  Account.hpp  AccountRegistry.cpp  AccountRegistry.hpp  Balance.cpp  Balance.hpp  BalanceLogger.cpp  BalanceLogger.hpp  Balances.cpp  Balances.hpp  CMakeLists.txt  Collateral.cpp  Collateral.hpp  FreeInfo.cpp  FreeInfo.hpp  Loan.cpp  common.cpp  margin_utils.cpp  margin_utils.hpp
simulate/trading/src/cpp/agent/: ALGOTraderAgent.cpp  ALGOTraderAgent.hpp  Agent.cpp  Agent.hpp  CMakeLists.txt  DelayDistribution.cpp  DelayDistribution.hpp  DistributedProxyAgent.cpp  DistributedProxyAgent.hpp  ExchangeAgentConfig.cpp  ExchangeAgentConfig.hpp  FuturesTraderAgent.cpp  FuturesTraderAgent.hpp  HighFrequencyTraderAgent.cpp  HighFrequencyTraderAgent.hpp  InitializationAgent.cpp  InitializationAgent.hpp  LocalAgentManager.cpp  LocalAgentManager.hpp  LocalAgentRoster.cpp  LocalAgentRoster.hpp  MultiBookExchangeAgent.cpp  MultiBookExchangeAgent.hpp  OrderLogAgent.cpp  OrderLogAgent.hpp  PythonAgent.cpp  PythonAgent.hpp  RandomTraderAgent.cpp  RandomTraderAgent.hpp  StylizedTraderAgent.cpp  StylizedTraderAgent.hpp  TradeLogAgent.cpp  TradeLogAgent.hpp
simulate/trading/src/cpp/base/: CMakeLists.txt  CSVPrintable.hpp  IConfigurable.hpp  IHumanPrintable.hpp  IMessageable.cpp  IMessageable.hpp  IPrintable.hpp
simulate/trading/src/cpp/book/: Book.cpp  Book.hpp  BookFactory.hpp  BookProcessLogger.cpp  BookProcessLogger.hpp  BookProcessManager.cpp  BookProcessManager.hpp  BookSignals.hpp  CMakeLists.txt  FeeLogger.cpp  L2Logger.cpp  L2Logger.hpp  L3EventLogger.cpp  L3EventLogger.hpp  PriceTimeBook.cpp  PriceTimeBook.hpp  TickContainer.cpp  UpdateCounter.cpp  UpdateCounter.hpp
simulate/trading/src/cpp/decimal/: CMakeLists.txt  decimal.hpp
simulate/trading/src/cpp/event/: CMakeLists.txt  Cancellation.cpp  CancellationEvent.cpp  L3RecordContainer.cpp  OrderEvent.cpp  TradeEvent.cpp
simulate/trading/src/cpp/exchange/: CMakeLists.txt  ClearingManager.cpp  ClearingManager.hpp  Exchange.cpp  Exchange.hpp  ExchangeConfig.cpp  ExchangeSignals.cpp  ExchangeSignals.hpp  FeePolicy.cpp  FeePolicy.hpp  FeePolicyFactory.cpp  FeePolicyFactory.hpp  FeePolicyWrapper.cpp  Fees.hpp  OrderPlacementValidator.cpp  OrderPlacementValidator.hpp  ReplayEventLogger.cpp  StaticFeePolicy.cpp  StaticFeePolicy.hpp  VIPFeePolicy.cpp  VIPFeePolicy.hpp  ZeroFeePolicy.hpp
simulate/trading/src/cpp/ipc/: CMakeLists.txt  PosixMessageQueue.cpp  PosixSemaphore.cpp
simulate/trading/src/cpp/message/: CMakeLists.txt  ExchangeAgentMessagePayloads.cpp  ExchangeAgentMessagePayloads.hpp  Message.cpp  Message.hpp  MessagePayload.cpp  MessagePayload.hpp  MessageQueue.cpp  MessageQueue.hpp  MessageType.hpp  MultiBookMessagePayloads.cpp  MultiBookMessagePayloads.hpp  PayloadFactory.cpp  PayloadFactory.hpp  ThreadSafeMessageQueue.cpp  ThreadSafeMessageQueue.hpp
simulate/trading/src/cpp/mp/: CMakeLists.txt  IsPointer.hpp  IsTypeOrPointerToType.hpp  mp.hpp
simulate/trading/src/cpp/net/: CMakeLists.txt  net.cpp  net.hpp  server.cpp  server.hpp
simulate/trading/src/cpp/process/: ALGOTrigger.cpp  ALGOTrigger.hpp  CMakeLists.txt  FundamentalPrice.cpp  FundamentalPrice.hpp  FuturesSignal.cpp  FuturesSignal.hpp  GBM.cpp  GBM.hpp  JumpDiffusion.cpp  JumpDiffusion.hpp  Process.hpp  ProcessFactory.cpp  ProcessFactory.hpp  RNG.cpp  RNG.hpp
simulate/trading/src/cpp/serialization/: CMakeLists.txt  CheckpointSerializable.hpp  JsonSerializable.hpp  Recoverable.hpp  json_util.cpp  json_util.hpp
simulate/trading/src/cpp/simulation/: CMakeLists.txt  SimulationConfig.cpp  SimulationManager.cpp  TimeConfig.cpp  replay_helpers.cpp  util.cpp
simulate/trading/src/cpp/stats/: CMakeLists.txt  DiracDeltaDistribution.cpp  DiracDeltaDistribution.hpp  Distribution.hpp  DistributionFactory.cpp  DistributionFactory.hpp  GammaDistribution.cpp  GammaDistribution.hpp  LognormalDistribution.cpp  LognormalDistribution.hpp  RayleighDistribution.cpp  RayleighDistribution.hpp
simulate/trading/src/cpp/util/: CMakeLists.txt  Cancellation.cpp  Cancellation.hpp  ClosePosition.cpp  ClosePosition.hpp  EventRecord.cpp  EventRecord.hpp  FeeLogEvent.hpp  Flags.hpp  GBMValuationModel.hpp  InstructionLogger.cpp  InstructionLogger.hpp  L3LogEvent.hpp  LimitedDeque.hpp  Order.cpp  Order.hpp  OrderContainer.hpp  OrderFactory.cpp  OrderFactory.hpp  ParameterStorage.cpp  ParameterStorage.hpp  SimulationException.hpp  SubscriptionRegistry.hpp  TickContainer.cpp  TickContainer.hpp  Timestamp.hpp  Trade.cpp  Trade.hpp  TradeFactory.cpp  TradeFactory.hpp  common.hpp  util.cpp  util.hpp
simulate/trading/test/cpp-tests/: ALGOTraderTests.cpp  BalanceTests.cpp  CMakeLists.txt  DecimalTests.cpp  LimitedDequeTests.cpp  LoanSettlementTests.cpp  MarginTradingTests.cpp  MessageQueueTests.cpp  MultiBookExchangeAgentTests.cpp  QuoteBasedOrderTests.cpp  SelfTradePreventionTests.cpp  SubscriptionRegistryTests.cpp  UtilTests.cpp
simulate/trading/test/cpp-tests/accounting/: BalanceTests.cpp  BalancesTests.cpp  CMakeLists.txt  CollateralTests.cpp  FeesTests.cpp  LoanTests.cpp
simulate/trading/test/cpp-tests/data/: BookStateMatch.xml  MultiAgent.xml  MultiAgentFees.xml  MultiAgentFeesNegative.xml  MultiAgentMoreFullBookWithCancels.cancels.json  data_tool.py  (+10 more)
simulate/trading/test/python-tests/: test_simulator_heuristic.py
(+123 files in other folders)
